Home re-layout DONE!

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
   <a href="#home-intro_2" class="bullet" rel="m_PageScroll2id"></a>
   <a href="#prj-schecker" class="bullet" rel="m_PageScroll2id"></a>
   <a href="#prj-bardot" class="bullet" rel="m_PageScroll2id"></a>
+  <a href="#prj-rr" class="bullet" rel="m_PageScroll2id"></a>
   <a href="#prj-sa" class="bullet" rel="m_PageScroll2id"></a>
   <a href="#more-works" class="bullet" rel="m_PageScroll2id"></a>
   <a href="#contact-me" class="bullet" rel="m_PageScroll2id"></a>
@@ -105,10 +106,10 @@
 <!-- Homepage Intro Section -->
 <section class="flex-row" id="home-intro">
 
-  <h1 id="intro_text">Hi, <br />Welcome!</h1>
+  <h1 class="in-out-el" id="intro_text">Hi, <br />Welcome!</h1>
 
     <!-- CTA arrow for next page -->
-    <a class="CTAarrow arrow-down" id="home-CTAarrow" href="#home-intro_2" rel="m_PageScroll2id">
+    <a class="CTAarrow arrow-down in-out-el" id="home-CTAarrow" href="#home-intro_2" rel="m_PageScroll2id">
       <div class="arrow-circles">
           <div class="arrow-circle"></div>
           <svg class="svg-circle" width="52px" height="52px" viewBox="0 0 52 52" >
@@ -128,7 +129,7 @@
 
 <section class="flex-column" id="home-intro_2">
   <!-- <div id="home-intro_2"> -->
-  <div class="centered-text intro2-in-out">
+  <div class="centered-text in-out-el">
     <h2>
         I do UX/UI.<br />
     </h2>
@@ -147,17 +148,17 @@
 
 <section class="project" id="prj-schecker">
     <!-- Project hero image -->
-    <a class="prj-hero_img" href="./scheckerIntro.html"> </a>
+    <a class="prj-hero_img in-out-el" href="./scheckerIntro.html"> </a>
 
      <!-- Project Description -->
       <div class="project-description" id="prj-des_schecker">
         <div class="prj-des-contents">
-          <h3 class="schecker-in-out">Schecker</h3>
-            <p class="schecker-in-out">
-              Product concept - Ideation - Vision - Prototyping
+          <h3 class="in-out-el">Schecker</h3>
+            <p class="in-out-el">
+              Product concept • Ideation • Vision • Interactive Prototype
             </p>
           <!-- CTA -->
-            <a class="CTA-button prj-CTA schecker-in-out" id="schecker-CTA" href="./scheckerIntro.html">
+            <a class="CTA-button prj-CTA in-out-el" id="schecker-CTA" href="./scheckerIntro.html">
               <svg class="button-outline" width="188px" height="52px" viewBox="0 0 188 52">
                   <g stroke="none" stroke-width="2" fill="none" fill-rule="evenodd">
                       <g class="cta-btn-stroke" transform="translate(-780.000000, -669.000000)" fill-rule="nonzero" stroke="#0e83ea">
@@ -176,16 +177,16 @@
 
 <section class="project" id="prj-bardot">
 
-    <a href="./bardot.html" class="prj-hero_img"> </a>
+    <a href="./bardot.html" class="prj-hero_img in-out-el"> </a>
      <!-- Project Description -->
       <div class="project-description"  id="prj-des_bardot">
         <div class="prj-des-contents" id="prj-des-contents_bardot">
-          <h3 class="bardot-in-out">Bardot</h3>
-            <p class="bardot-in-out">
-            UX/UI optimisation and website re-design.
+          <h3 class="in-out-el">Bardot</h3>
+            <p class="in-out-el">
+              eCommerce • UX/UI Optimisation • Redesign
             </p>
           <!-- CTA -->
-            <a class="CTA-button prj-CTA bardot-in-out" id="bardot-CTA" href="./bardot.html">
+            <a class="CTA-button prj-CTA in-out-el" id="bardot-CTA" href="./bardot.html">
               <svg class="button-outline" width="188px" height="52px" viewBox="0 0 188 52">
                   <g stroke="none" stroke-width="2" fill="none" fill-rule="evenodd">
                       <g class="cta-btn-stroke" transform="translate(-780.000000, -669.000000)" fill-rule="nonzero" stroke="#0e83ea">
@@ -200,21 +201,42 @@
 </section>
 
 
-
+<section class="project" id="prj-rr">
+    <a href="./rr.html" class="prj-hero_img in-out-el"> </a>
+     <!-- Project Description -->
+      <div class="project-description"  id="prj-des_rr">
+        <div class="prj-des-contents" id="prj-des-contents_rr">
+          <h3 class="in-out-el">Radio Rentals</h3>
+            <p class="in-out-el">
+              UX • Wireframe
+            </p>
+          <!-- CTA -->
+            <a class="CTA-button prj-CTA in-out-el" id="rr-CTA" href="./sa.html">
+              <svg class="button-outline" width="188px" height="52px" viewBox="0 0 188 52">
+                  <g stroke="none" stroke-width="2" fill="none" fill-rule="evenodd">
+                      <g class="cta-btn-stroke" transform="translate(-780.000000, -669.000000)" fill-rule="nonzero" stroke="#0e83ea">
+                          <rect x="780.5" y="669.5" width="187" height="51"></rect>
+                      </g>
+                  </g>
+                  <foreignObject width="188" height="52" y="14"><h6 class="CTA-label">CHECK IT OUT</h6></foreignObject>
+              </svg>
+            </a>
+        </div>
+      </div>
+</section>
 
 
 <section class="project" id="prj-sa">
-
-    <a href="./sa.html" class="prj-hero_img"> </a>
+    <a href="./sa.html" class="prj-hero_img in-out-el"> </a>
      <!-- Project Description -->
       <div class="project-description"  id="prj-des_sa">
         <div class="prj-des-contents" id="prj-des-contents_sa">
-          <h3 class="sa-in-out">Standards Australia</h3>
-            <p class="sa-in-out">
-              Visual / UI website re-design.
+          <h3 class="in-out-el">Standards Australia</h3>
+            <p class="in-out-el">
+              Visual • UI
             </p>
           <!-- CTA -->
-            <a class="CTA-button prj-CTA sa-in-out" id="sa-CTA" href="./sa.html">
+            <a class="CTA-button prj-CTA in-out-el" id="sa-CTA" href="./sa.html">
               <svg class="button-outline" width="188px" height="52px" viewBox="0 0 188 52">
                   <g stroke="none" stroke-width="2" fill="none" fill-rule="evenodd">
                       <g class="cta-btn-stroke" transform="translate(-780.000000, -669.000000)" fill-rule="nonzero" stroke="#0e83ea">
@@ -230,20 +252,20 @@
 
 
 <section class="flex-column" id="more-works">
-  <h3 class="contact-in-out">There're more</h3>
-  <a class="big-link contact-in-out" href="./works.html" target="_blank"><h5>View all</h5></a>
+  <h3 class="in-out-el">There're more</h3>
+  <a class="big-link in-out-el" href="./works.html" target="_blank"><h5>View all</h5></a>
 </section>
 
 
 
 
 <section class="flex-column" id="contact-me">
-  <h1 style="text-align:center;">Let's talk</h1>
-    <a class="big-link" id="home-mailto" target="_blank"
+  <h1 class="in-out-el" style="text-align:center;">Let's talk</h1>
+    <a class="big-link in-out-el" id="home-mailto" target="_blank"
     href="mailto:nhuthoangdon@gmail.com?Subject=Got%20you%20an%20Offer&Body=Hey%20Nhut"><h5>Drop me a line</h5></a>
 
   <?xml version="1.0" encoding="UTF-8"?>
-    <svg id="smiley-face" width="65px" height="58px" viewBox="0 0 65 58"
+    <svg id="smiley-face" class="in-out-el" width="65px" height="58px" viewBox="0 0 65 58"
          version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
         <!-- Generator: Sketch 63.1 (92452) - https://sketch.com -->
         <g id="smiley" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
