Home updates - Heineken added.

--- a/bardot.html
+++ b/bardot.html
@@ -101,8 +101,10 @@
     <div class="block small-block block-in">
       <h4>SEARCH UI Enhancement</h4>
       <p>
-        Redesigned search bar to be more visually prominent, incorporated trending items into expanded search panel
-        as pre-suggestions.
+        Search is an important function for most platforms, even more so for eCommerce.
+         The first approach in the redesign process was to reconstruct the header, with a focus on the Search function.
+         The new search UI is a lot more prominent as opposed to the old generic one, with 'pre-suggested' trending items
+         serving as a visual cue to draw user attention to 'hot' products.
       </p>
     </div>
     <div class="block big-block no-text-block block-in">
@@ -116,7 +118,11 @@
     <div class="block small-block block-in">
       <h4>SEARCH SUGGESTION UX</h4>
       <p>
-        Improved suggestions base on user search behaviour research.
+        The search suggestion was also studied carefully by our UX team, we analysed common keywords and proposed
+        that the suggestions should go beyond matching keywords to: <br />
+        1. Always show suggestions (even if the keyword goes wild) <br />
+        2. Pushed sale items to be prioritised <br />
+        3. Categorised suggestions base on keyword(s)
       </p>
     </div>
   </div>
