--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 <div id="bullets">
   <a href="#home-intro" class="bullet" rel="m_PageScroll2id"></a>
   <a href="#home-intro_2" class="bullet" rel="m_PageScroll2id"></a>
+  <a href="#prj-heineken" class="bullet" rel="m_PageScroll2id"></a>
   <a href="#prj-schecker" class="bullet" rel="m_PageScroll2id"></a>
   <a href="#prj-bardot" class="bullet" rel="m_PageScroll2id"></a>
   <a href="#prj-rr" class="bullet" rel="m_PageScroll2id"></a>
@@ -145,6 +146,33 @@
 
 
 
+<section class="project" id="prj-heineken">
+    <!-- Project hero image -->
+    <a class="prj-hero_img in-out-el" href="./heineken.html"> </a>
+
+     <!-- Project Description -->
+      <div class="project-description" id="prj-des_heineken">
+        <div class="prj-des-contents">
+          <h3 class="in-out-el">Heineken</h3>
+            <p class="in-out-el">
+              B2B eCommerce Platform • UX/UI • Complex Flows
+            </p>
+          <!-- CTA -->
+            <a class="CTA-button prj-CTA in-out-el" id="heineken-CTA" href="./heineken.html">
+              <svg class="button-outline" width="188px" height="52px" viewBox="0 0 188 52">
+                  <g stroke="none" stroke-width="2" fill="none" fill-rule="evenodd">
+                      <g class="cta-btn-stroke" transform="translate(-780.000000, -669.000000)" fill-rule="nonzero" stroke="#0e83ea">
+                          <rect x="780.5" y="669.5" width="187" height="51"></rect>
+                      </g>
+                  </g>
+                  <foreignObject width="188" height="52" y="14"><h6 class="CTA-label">CHECK IT OUT</h6></foreignObject>
+              </svg>
+            </a>
+        </div>
+      </div>
+</section>
+
+
 
 <section class="project" id="prj-schecker">
     <!-- Project hero image -->
@@ -155,7 +183,7 @@
         <div class="prj-des-contents">
           <h3 class="in-out-el">Schecker</h3>
             <p class="in-out-el">
-              Product concept • Ideation • Vision • Interactive Prototype
+              Medical App • Concept • Ideation • Vision • Prototype
             </p>
           <!-- CTA -->
             <a class="CTA-button prj-CTA in-out-el" id="schecker-CTA" href="./scheckerIntro.html">
@@ -183,7 +211,7 @@
         <div class="prj-des-contents" id="prj-des-contents_bardot">
           <h3 class="in-out-el">Bardot</h3>
             <p class="in-out-el">
-              eCommerce • UX/UI Optimisation • Redesign
+              B2C eCommerce • UX/UI • Redesign
             </p>
           <!-- CTA -->
             <a class="CTA-button prj-CTA in-out-el" id="bardot-CTA" href="./bardot.html">
@@ -208,7 +236,7 @@
         <div class="prj-des-contents" id="prj-des-contents_rr">
           <h3 class="in-out-el">Radio Rentals</h3>
             <p class="in-out-el">
-              UX • Wireframe
+              Complex Forms • UX • Wireframe
             </p>
           <!-- CTA -->
             <a class="CTA-button prj-CTA in-out-el" id="rr-CTA" href="./sa.html">
@@ -233,7 +261,7 @@
         <div class="prj-des-contents" id="prj-des-contents_sa">
           <h3 class="in-out-el">Standards Australia</h3>
             <p class="in-out-el">
-              Visual • UI
+              Visual • UI • CMS friendly
             </p>
           <!-- CTA -->
             <a class="CTA-button prj-CTA in-out-el" id="sa-CTA" href="./sa.html">
