Heineken Description Updates

--- a/heineken.html
+++ b/heineken.html
@@ -72,26 +72,28 @@
     <div class="block block-in">
       <h2>The Brief</h2>
       <p>
-        Optimise/review the whole site's UX/UI and deliver a new website to enhance user shopping experience and sale revenues.
+        Heineken was launching a new, centralised B2B eCommerce platform that was consolidated, yet customisable for each individual country/region.
+        My role in this project was to implement new features and improve the current UX/UI where feasible for relevant Opcos in the APAC region.
       </p>
     </div>
       <div class="block block-in">
         <p>
-          <strong>Project type</strong> <br />
-          Website re-design. <br /><br />
-          <strong>My Role</strong> <br />
-          UX/UI design.
+          <strong>Platform</strong> <br />
+           Web & App (App focus). <br /><br />
+          <strong>Deliveries</strong> <br />
+           Interactive Prototype
         </p>
       </div>
   </div>
 
 </section>
 
-<section class="challenge block-in" id="bardot-challenge">
+<section class="challenge block-in" id="heineken-challenge">
   <h3>CHALLENGES</h3>
     <div class="block">
       <p>
-        Many micro interactions, out-of-scope functionalities, mobile optimisation for heavy contents.
+        Requirements of some Opcos can be challenging to customise so that the features would meet the Opcos' needs while being well-aligned with the central platform.
+        Thus any design decision was a result of many discussions amongst multidisciplinary teams.
       </p>
     </div>
 </section>
@@ -102,11 +104,14 @@
     <h4 class="block-in">On-boarding Flow</h4>
     <div class="block no-margin-top block-in">
       <p>
-        Improved Login/Registration flow UX: <br />
-        • Trim down unnecessary information, break down the process into smaller steps (1 field per screen). <br />
-        • Incorporated Register/Login by mobile number and OTP on top of traditional email-password mechanism. <br />
-        • Auto-filled/auto-checked whenever applicable. <br />
-        • Simple, lean UI for no distraction. <br />
+        <strong><u>Problem(s):</u></strong> the old UX/UI was generic, with many input fields on one same screen/page; the app's UI was not optimised for mobile (unfriendly
+        font-size, unnecessary use of overlays, distracting background, and so on). <br />
+        <strong><u>Improvement(s):</u></strong> <br />
+        • Reviewed and trimmed down unnecessary information, broke down the process into smaller steps: 1 field per screen. <br />
+        • Limited options/interactions: multiple inputs on the same field (i.e. email, username or phone number for login ID),
+          auto validation (validate as soon as the user has done
+          typing - no additional click needed to proceed). <br />
+        • Simple, lean UI. <br />
       </p>
     </div>
 
@@ -118,41 +123,24 @@
 
 
 
-  <div class="wrapper">
-    <div class="block small-block block-in">
-      <h4>SEARCH UI Enhancement</h4>
+  <div class="wrapper big-col no-margin-top">
+    <h4 class="block-in">Multi-distributor Order Flow</h4>
+    <div class="block no-margin-top block-in">
       <p>
-        Search is an important function for most platforms, even more so for eCommerce.
-         The first approach in the redesign process was to reconstruct the header, with a focus on the Search function.
-         The new search UI is a lot more prominent as opposed to the old generic one, with 'pre-suggested' trending items
-         serving as a visual cue to draw user attention to 'hot' products.
+        <strong><u>Problem(s):</u></strong> <br/>
+        • Current system only allowed purchasing from 1 distributor/time. As an eCommerce platform, this wouldn't provide optimal
+        experience for users. <br />
+        • Distributor could only be selected at the beginning of app/web launch, no direct/easy path to select another seller. <br />
+        <strong><u>Improvement(s):</u></strong> <br />
+        • Revised the whole ordering process: Product Category/Listing - Cart - Order Summary - Checkout - Confirmation. <br />
+        • Incorporated distributor selection on Category Browsing for easy switching. <br />
+        • Catered Cart, Order Summary, Checkout, Confirmation for multiple distributor display. <br />
+        • Options to review & select/deselect items on Cart.
       </p>
     </div>
-    <div class="block big-block no-text-block block-in">
-      <img alt="Search" class="desktop-screen" src="./Assets/bardot-search.jpg" />
-    </div>
-  </div>
-  <div class="wrapper odd">
-    <div class="block big-block no-text-block block-in">
-      <img alt="Search Suggestions" class="desktop-screen" src="./Assets/bardot-searchSuggestion.jpg" />
-    </div>
-    <div class="block small-block block-in">
-      <h4>SEARCH SUGGESTION UX</h4>
-      <p>
-        The search suggestion was also studied carefully by our UX team, we analysed common keywords and proposed
-        that the suggestions should go beyond matching keywords to: <br />
-        1. Always show suggestions (even if the keyword goes wild) <br />
-        2. Pushed sale items to be prioritised <br />
-        3. Categorised suggestions base on keyword(s)
-      </p>
-    </div>
+        <img alt="Search" class="desktop-screen block-in" src="./Assets/bardot-search.jpg" />
   </div>
 
-  <div class="wrapper">
-    <div class="block no-text-block block-in">
-      <img alt="Mobile Search" src="./Assets/bardot-m-search.png" />
-    </div>
-  </div>
 
 
 
