Heineken Update (in progress)

--- a/heineken.html
+++ b/heineken.html
@@ -64,9 +64,7 @@
 
 <section class="project-intro">
 
-  <div class="project-hero block-in">
-    <div class="hero-img" id="heineken-hero-img"></div>
-  </div>
+  <div class="hero-img" id="heineken-hero-img"></div>
 
   <div class="wrapper">
     <div class="block block-in">
@@ -81,7 +79,7 @@
           <strong>Platform</strong> <br />
            Web & App (App focus). <br /><br />
           <strong>Deliveries</strong> <br />
-           Interactive Prototype
+           Interactive Prototype.
         </p>
       </div>
   </div>
@@ -93,10 +91,11 @@
     <div class="block">
       <p>
         Requirements of some Opcos can be challenging to customise so that the features would meet the Opcos' needs while being well-aligned with the central platform.
-        Thus any design decision was a result of many discussions amongst multidisciplinary teams.
+        Thus, any design decision was a result of many discussions amongst multidisciplinary teams.
       </p>
     </div>
 </section>
+
 
 <section id="heineken-home">
 
@@ -104,13 +103,14 @@
     <h4 class="block-in">On-boarding Flow</h4>
     <div class="block no-margin-top block-in">
       <p>
-        <strong><u>Problem(s):</u></strong> the old UX/UI was generic, with many input fields on one same screen/page; the app's UI was not optimised for mobile (unfriendly
-        font-size, unnecessary use of overlays, distracting background, and so on). <br />
+        <strong><u>Problem(s):</u></strong> <br />
+        • Unfriendly Login/Registration processes, too much information on a single screen. <br>
+        • The UI was not optimised for mobile (unsuitable font-size, unnecessary use of overlays, distracting background, and so on). <br />
+        •
         <strong><u>Improvement(s):</u></strong> <br />
         • Reviewed and trimmed down unnecessary information, broke down the process into smaller steps: 1 field per screen. <br />
-        • Limited options/interactions: multiple inputs on the same field (i.e. email, username or phone number for login ID),
-          auto validation (validate as soon as the user has done
-          typing - no additional click needed to proceed). <br />
+        • Limited options: multiple inputs accepted in the same field (i.e. email, username or phone number for login ID). <br />
+        • Auto validation (validate as soon as the user has done typing - no additional click needed to proceed). <br />
         • Simple, lean UI. <br />
       </p>
     </div>
@@ -128,11 +128,13 @@
     <div class="block no-margin-top block-in">
       <p>
         <strong><u>Problem(s):</u></strong> <br/>
-        • Current system only allowed purchasing from 1 distributor/time. As an eCommerce platform, this wouldn't provide optimal
+        • Current system only allowed purchasing from 1 distributor per time. As an eCommerce platform, this wouldn't provide optimal
         experience for users. <br />
-        • Distributor could only be selected at the beginning of app/web launch, no direct/easy path to select another seller. <br />
+        • Distributor could only be selected at the beginning of app/web launch, no direct or easy path to re-select. <br />
+        • Compromised current cart logic when changing distributor while there were already items from another distributor in cart. <br>
         <strong><u>Improvement(s):</u></strong> <br />
-        • Revised the whole ordering process: Product Category/Listing - Cart - Order Summary - Checkout - Confirmation. <br />
+        • Revised the whole ordering experience <br>
+        • Revamped UI of: Product Category/Listing - Cart - Order Summary - Checkout - Confirmation. <br />
         • Incorporated distributor selection on Category Browsing for easy switching. <br />
         • Catered Cart, Order Summary, Checkout, Confirmation for multiple distributor display. <br />
         • Options to review & select/deselect items on Cart.
@@ -145,11 +147,13 @@
 
 
   <div class="wrapper big-col">
-    <h4 class="block-in">DROPDOWN MENU UI</h4>
+    <h4 class="block-in">Order Details & Management Flow</h4>
     <div class="block no-margin-top block-in">
       <p>
-        Enhanced dropdown menu visual and purposely added relevant promotional CTA banners to make use of the header's
-        real estate.
+        <strong><u>Problem(s):</u></strong> <br>
+        • Order Details and Management needed to be customised to suit individual Opco's mechanism. <br>
+        <strong><u>Improvement(s):</u></strong> <br>
+        • Analysed requests vs. supported UX/UI and updated/created designs accordingly. <br>
       </p>
     </div>
 
@@ -159,48 +163,6 @@
       </video>
   </div>
 
-
-  <div class="wrapper light-bg-f9f9f9">
-    <div class="block small-block block-in">
-      <h4>LOCATE IN-STORE Feature</h4>
-      <p>
-        An out-of-scope function to show which stores the item is currently available at.
-        Designed as a popup for a quick check-and-close action before the users continue with the browsing.
-      </p>
-    </div>
-    <div class="block big-block no-text-block block-in">
-      <img alt="Search" class="desktop-screen" src="./Assets/bardot-locateInStore_result.jpg" />
-    </div>
-  </div>
-  <div class="wrapper big-col">
-    <h4 class="block-in">Store finder Design</h4>
-    <div class="block no-margin-top block-in">
-      <p>
-        Store finder design with store-related promotion panels.
-      </p>
-    </div>
-    <img alt="Find a store" class="noShadow-img block-in" src="./Assets/bardot-findStore.png" />
-  </div>
-
-
-
-
-
-
-
-
-
-  <div class="wrapper">
-    <div class="block small-block block-in">
-      <h4>PRODUCT BADGE Design</h4>
-      <p>
-        Unique product badges for applicable product tiles.
-      </p>
-    </div>
-    <div class="block no-text-block big-block block-in">
-      <img alt="Mobile Search" src="./Assets/bardot-badges.jpg" />
-    </div>
-  </div>
 
 </section>
 
