Heineken wording updates (cont.)

--- a/bardot.html
+++ b/bardot.html
@@ -213,6 +213,9 @@
 
 <section class="light-bg-f9f9f9" id="bardot-screenCollage">
   <h4 class="block-in">Secondary Pages</h4>
+  <p class="block-in">
+    All secondary pages: Order Details/Management, Account Management, Settings, etc.
+  </p>
   <div class="block-in">
     <img alt="user flow" src="./Assets/bardot-collage.png" />
   </div>
