--- a/heineken.html
+++ b/heineken.html
@@ -90,8 +90,8 @@
   <h3>CHALLENGES</h3>
     <div class="block">
       <p>
-        Requirements of some Opcos can be challenging to customise so that the features would meet the Opcos' needs while being well-aligned with the central platform.
-        Thus, any design decision was a result of many discussions amongst multidisciplinary teams.
+        Requirements of some Opcos can be challenging to customise so that the features would meet the Opcos' needs while being well-aligned with the central platform,
+        without causing tremendous development efforts.
       </p>
     </div>
 </section>
@@ -105,12 +105,12 @@
       <p>
         <strong><u>Problem(s):</u></strong> <br />
         • Unfriendly Login/Registration processes, too much information on a single screen. <br>
+        • Only supported traditional login with username and password, which research showed a high rate of users forgetting after the initial setup. <br>
         • The UI was not optimised for mobile (unsuitable font-size, unnecessary use of overlays, distracting background, and so on). <br />
-        •
         <strong><u>Improvement(s):</u></strong> <br />
-        • Reviewed and trimmed down unnecessary information, broke down the process into smaller steps: 1 field per screen. <br />
-        • Limited options: multiple inputs accepted in the same field (i.e. email, username or phone number for login ID). <br />
-        • Auto validation (validate as soon as the user has done typing - no additional click needed to proceed). <br />
+        • Reviewed and trimmed down unnecessary information, broke down the process into smaller steps. <br />
+        • Integrated login/register with mobile number and OTP. <br>
+        • Limited options, utilised similar inputs in 1 single field (i.e. email, username or phone number for login ID). <br />
         • Simple, lean UI. <br />
       </p>
     </div>
@@ -124,7 +124,7 @@
 
 
   <div class="wrapper big-col no-margin-top">
-    <h4 class="block-in">Multi-distributor Order Flow</h4>
+    <h4 class="block-in">Order Flow</h4>
     <div class="block no-margin-top block-in">
       <p>
         <strong><u>Problem(s):</u></strong> <br/>
@@ -133,11 +133,9 @@
         • Distributor could only be selected at the beginning of app/web launch, no direct or easy path to re-select. <br />
         • Compromised current cart logic when changing distributor while there were already items from another distributor in cart. <br>
         <strong><u>Improvement(s):</u></strong> <br />
-        • Revised the whole ordering experience <br>
-        • Revamped UI of: Product Category/Listing - Cart - Order Summary - Checkout - Confirmation. <br />
-        • Incorporated distributor selection on Category Browsing for easy switching. <br />
-        • Catered Cart, Order Summary, Checkout, Confirmation for multiple distributor display. <br />
-        • Options to review & select/deselect items on Cart.
+        • Revised the whole ordering experience to allow for multiple distributor purchases. <br>
+        • Enhanced checkout process. <br />
+        • Revamped relevant UI. <br />
       </p>
     </div>
         <img alt="Search" class="desktop-screen block-in" src="./Assets/bardot-search.jpg" />
