Heineken&Bardot descriptions updates + cleaned up css&js

--- a/bardot.html
+++ b/bardot.html
@@ -64,65 +64,59 @@
 
 <section class="project-intro">
 
-  <div class="project-hero block-in">
-    <div class="hero-img" id="bardot-hero-img"></div>
-  </div>
+  <div class="hero-img" id="bardot-hero-img"></div>
 
   <div class="wrapper">
-    <div class="block block-in">
-      <h2>The Brief</h2>
-      <p>
-        Optimise/review the whole site's UX/UI and deliver a new website to enhance user shopping experience and sale revenues.
+    <div class="block">
+      <h2 class="block-in">The Brief</h2>
+      <p class="block-in">
+        Bardot was looking for a new, refreshed design for their eCommerce website.
+        Our teams' mission was to optimise the current site's UX/UI and deliver a new shopping experience that would drive conversion rate forward.
       </p>
     </div>
-      <div class="block block-in">
+      <div class="block">
         <p>
-          <strong>Project type</strong> <br />
-          Website re-design. <br /><br />
-          <strong>My Role</strong> <br />
-          UX/UI design.
+          <strong class="block-in">Platform</strong> <br />
+           Responsive web. <br /><br />
+          <strong class="block-in">Deliveries</strong> <br />
+           Interactive Prototype.
         </p>
       </div>
   </div>
-
 </section>
 
-<section class="challenge block-in" id="bardot-challenge">
-  <h3>CHALLENGES</h3>
-    <div class="block">
+<section class="challenge" id="bardot-challenge">
+  <h3 class="block-in">CHALLENGES</h3>
+    <div class="block block-in">
       <p>
-        Many micro interactions, out-of-scope functionalities, mobile optimisation for heavy contents.
+        Micro interactions, out-of-scope functionalities, mobile optimisation for heavy contents.
       </p>
     </div>
 </section>
 
 <section id="bardot-home">
+
   <div class="wrapper">
-    <div class="block small-block block-in">
-      <h4>SEARCH UI Enhancement</h4>
-      <p>
+    <div class="block small-block">
+      <h4 class="block-in">SEARCH Enhancement</h4>
+      <p class="block-in">
         Search is an important function for most platforms, even more so for eCommerce.
          The first approach in the redesign process was to reconstruct the header, with a focus on the Search function.
-         The new search UI is a lot more prominent as opposed to the old generic one, with 'pre-suggested' trending items
-         serving as a visual cue to draw user attention to 'hot' products.
       </p>
     </div>
     <div class="block big-block no-text-block block-in">
       <img alt="Search" class="desktop-screen" src="./Assets/bardot-search.jpg" />
     </div>
   </div>
+
   <div class="wrapper odd">
     <div class="block big-block no-text-block block-in">
       <img alt="Search Suggestions" class="desktop-screen" src="./Assets/bardot-searchSuggestion.jpg" />
     </div>
-    <div class="block small-block block-in">
-      <h4>SEARCH SUGGESTION UX</h4>
-      <p>
-        The search suggestion was also studied carefully by our UX team, we analysed common keywords and proposed
-        that the suggestions should go beyond matching keywords to: <br />
-        1. Always show suggestions (even if the keyword goes wild) <br />
-        2. Pushed sale items to be prioritised <br />
-        3. Categorised suggestions base on keyword(s)
+    <div class="block small-block">
+      <h4 class="block-in">SEARCH SUGGESTION</h4>
+      <p class="block-in">
+        Analysed and suggested search algorithms as a result of the collaboration between UX research, design, and development teams.
       </p>
     </div>
   </div>
@@ -136,11 +130,11 @@
 
 
   <div class="wrapper big-col light-bg-f9f9f9">
-    <h4 class="block-in">Header Revamp</h4>
-    <div class="block no-margin-top block-in">
-      <p>
-        Decluttered old header by removing unnecessary items, made mandatory ones accessible (base on heatmaps from
-        user research).
+    <div class="block">
+      <h4 class="block-in">Header Revamp</h4>
+      <p class="block-in">
+        Heatmaps from user research showed the majority of interactions happened within the top.
+        We decluttered the old header, removed unnecessary items, and made mandatory ones easily accessible.
       </p>
     </div>
 
@@ -152,11 +146,10 @@
 
 
   <div class="wrapper big-col">
-    <h4 class="block-in">DROPDOWN MENU UI</h4>
-    <div class="block no-margin-top block-in">
-      <p>
-        Enhanced dropdown menu visual and purposely added relevant promotional CTA banners to make use of the header's
-        real estate.
+    <div class="block">
+      <h4 class="block-in">DROPDOWN MENU UI</h4>
+      <p class="block-in">
+        Redesigned the Dropdown Menu, enhanced its UI, sorted the categories with a better taxonomy.
       </p>
     </div>
 
@@ -168,58 +161,45 @@
 
 
   <div class="wrapper light-bg-f9f9f9">
-    <div class="block small-block block-in">
-      <h4>LOCATE IN-STORE Feature</h4>
-      <p>
-        An out-of-scope function to show which stores the item is currently available at.
-        Designed as a popup for a quick check-and-close action before the users continue with the browsing.
+    <div class="block small-block">
+      <h4 class="block-in">LOCATE IN-STORE Feature</h4>
+      <p class="block-in">
+        Last-minute out-of-scope function for an in-store availability quick check.
+        A quick Popup served perfectly well for this purpose.
       </p>
     </div>
     <div class="block big-block no-text-block block-in">
       <img alt="Search" class="desktop-screen" src="./Assets/bardot-locateInStore_result.jpg" />
     </div>
   </div>
-  <div class="wrapper big-col">
-    <h4 class="block-in">Store finder Design</h4>
-    <div class="block no-margin-top block-in">
-      <p>
-        Store finder design with store-related promotion panels.
-      </p>
-    </div>
-    <img alt="Find a store" class="noShadow-img block-in" src="./Assets/bardot-findStore.png" />
-  </div>
 
 
-
-
-
-
-
-
-
-  <div class="wrapper">
-    <div class="block small-block block-in">
-      <h4>PRODUCT BADGE Design</h4>
-      <p>
-        Unique product badges for applicable product tiles.
-      </p>
-    </div>
+  <div class="wrapper odd">
     <div class="block no-text-block big-block block-in">
       <img alt="Mobile Search" src="./Assets/bardot-badges.jpg" />
     </div>
+    <div class="block small-block">
+      <h4 class="block-in">PRODUCT BADGES</h4>
+      <p class="block-in">Designed visually distinguished badges for applicable product tiles.</p>
+    </div>
   </div>
 
-</section>
-
-<section class="light-bg-f9f9f9" id="bardot-screenCollage">
-  <h4 class="block-in">Secondary Pages</h4>
-  <p class="block-in">
-    All secondary pages: Order Details/Management, Account Management, Settings, etc.
-  </p>
-  <div class="block-in">
-    <img alt="user flow" src="./Assets/bardot-collage.png" />
+  <div class="wrapper big-col light-bg-f9f9f9">
+    <div class="block">
+      <h4 class="block-in">Store finder Design</h4>
+    </div>
+    <img alt="Find a store" class="noShadow-img block-in" src="./Assets/bardot-findStore.png" />
   </div>
 </section>
+
+
+<div class="wrapper big-col" id="bardot-screenCollage">
+    <h4 class="block-in">Secondary Pages</h4>
+    <p class="block-in">
+      All the other pages: Order Details/Management, Account Management, Settings, etc.
+    </p>
+      <img alt="user flow" class="screenCollage block-in" src="./Assets/bardot-collage.png" />
+</div>
 
 
 
