--- a/heineken.html
+++ b/heineken.html
@@ -103,14 +103,14 @@
     <h4 class="block-in">On-boarding Flow</h4>
     <div class="block no-margin-top block-in">
       <p>
-        <strong><u>Problem(s):</u></strong> <br />
+        <strong><u>Issue(s):</u></strong> <br />
         • Unfriendly Login/Registration processes, too much information on a single screen. <br>
-        • Only supported traditional login with username and password, which research showed a high rate of users forgetting after the initial setup. <br>
+        • Only supported traditional login with username and password, which research showed the majority of users forgetting after the initial setup. <br>
         • The UI was not optimised for mobile (unsuitable font-size, unnecessary use of overlays, distracting background, and so on). <br />
-        <strong><u>Improvement(s):</u></strong> <br />
+        <strong><u>Approach(es):</u></strong> <br />
         • Reviewed and trimmed down unnecessary information, broke down the process into smaller steps. <br />
         • Integrated login/register with mobile number and OTP. <br>
-        • Limited options, utilised similar inputs in 1 single field (i.e. email, username or phone number for login ID). <br />
+        • Limited user options, utilised similar inputs in 1 single field (e.g. email, username or phone number for login ID). <br />
         • Simple, lean UI. <br />
       </p>
     </div>
@@ -127,14 +127,14 @@
     <h4 class="block-in">Order Flow</h4>
     <div class="block no-margin-top block-in">
       <p>
-        <strong><u>Problem(s):</u></strong> <br/>
+        <strong><u>Issue(s):</u></strong> <br/>
         • Current system only allowed purchasing from 1 distributor per time. As an eCommerce platform, this wouldn't provide optimal
         experience for users. <br />
         • Distributor could only be selected at the beginning of app/web launch, no direct or easy path to re-select. <br />
         • Compromised current cart logic when changing distributor while there were already items from another distributor in cart. <br>
-        <strong><u>Improvement(s):</u></strong> <br />
+        <strong><u>Approach(es):</u></strong> <br />
         • Revised the whole ordering experience to allow for multiple distributor purchases. <br>
-        • Enhanced checkout process. <br />
+        • Enhanced checkout process & information hierachy. <br />
         • Revamped relevant UI. <br />
       </p>
     </div>
@@ -148,10 +148,11 @@
     <h4 class="block-in">Order Details & Management Flow</h4>
     <div class="block no-margin-top block-in">
       <p>
-        <strong><u>Problem(s):</u></strong> <br>
+        <strong><u>Issue(s):</u></strong> <br>
         • Order Details and Management needed to be customised to suit individual Opco's mechanism. <br>
-        <strong><u>Improvement(s):</u></strong> <br>
+        <strong><u>Approach(es):</u></strong> <br>
         • Analysed requests vs. supported UX/UI and updated/created designs accordingly. <br>
+        • Reconstruct ordering process from both seller & buyer sides.
       </p>
     </div>
 
@@ -165,7 +166,9 @@
 </section>
 
 <section class="light-bg-f9f9f9" id="bardot-screenCollage">
-  <h4 class="block-in">Secondary Pages</h4>
+  <h4 class="block-in">The Rest</h4>
+  <p>Other major & minor flows/twists.</p>
+
   <div class="block-in">
     <img alt="user flow" src="./Assets/bardot-collage.png" />
   </div>
